// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test if the tree is prepared  1`] = `
Object {
  "next": Array [
    Object {
      "next": Array [
        Object {
          "next": Array [
            Object {
              "next": Array [
                Object {
                  "next": Array [
                    Object {
                      "next": Array [],
                      "type": "eos",
                      "value": ".",
                    },
                  ],
                  "type": "value",
                  "value": "element-name",
                },
              ],
              "requireNext": true,
              "type": "keyword",
              "value": "THROUGH",
            },
            Object {
              "next": Array [
                Object {
                  "next": Array [
                    Object {
                      "next": Array [],
                      "type": "eos",
                      "value": ".",
                    },
                  ],
                  "type": "value",
                  "value": "element-name",
                },
              ],
              "requireNext": true,
              "type": "keyword",
              "value": "THRU",
            },
            Object {
              "next": Array [
                Object {
                  "next": Array [
                    Object {
                      "next": Array [
                        Object {
                          "next": Array [],
                          "type": "eos",
                          "value": ".",
                        },
                      ],
                      "type": "value",
                      "value": "file-dd-name",
                    },
                  ],
                  "requireNext": true,
                  "type": "keyword",
                  "value": "FILE",
                },
                Object {
                  "next": Array [
                    Object {
                      "next": Array [
                        Object {
                          "next": Array [],
                          "type": "eos",
                          "value": ".",
                        },
                      ],
                      "type": "value",
                      "value": "dd-name",
                    },
                  ],
                  "requireNext": true,
                  "type": "keyword",
                  "value": "DDNAME",
                },
                Object {
                  "next": Array [
                    Object {
                      "next": Array [
                        Object {
                          "next": Array [],
                          "type": "eos",
                          "value": ".",
                        },
                        Object {
                          "next": Array [
                            Object {
                              "next": Array [
                                Object {
                                  "next": Array [],
                                  "type": "eos",
                                  "value": ".",
                                },
                              ],
                              "type": "value",
                              "value": "memeber-name",
                            },
                          ],
                          "requireNext": true,
                          "type": "keyword",
                          "value": "MEMBER",
                        },
                      ],
                      "type": "value",
                      "value": "data-set-name",
                    },
                  ],
                  "requireNext": true,
                  "type": "keyword",
                  "value": "DSNAME",
                },
                Object {
                  "next": Array [
                    Object {
                      "next": Array [
                        Object {
                          "next": Array [
                            Object {
                              "next": Array [
                                Object {
                                  "next": Array [],
                                  "type": "eos",
                                  "value": ".",
                                },
                              ],
                              "type": "value",
                              "value": "uss-filename",
                            },
                          ],
                          "requireNext": true,
                          "type": "keyword",
                          "value": "USSFILE",
                        },
                      ],
                      "requireNext": true,
                      "type": "value",
                      "value": "uss-path",
                    },
                  ],
                  "requireNext": true,
                  "type": "keyword",
                  "value": "PATH",
                },
              ],
              "requireNext": true,
              "type": "keyword",
              "value": "FROM",
            },
            Object {
              "next": Array [
                Object {
                  "next": Array [
                    Object {
                      "next": Array [
                        Object {
                          "next": Array [],
                          "type": "eos",
                          "value": ".",
                        },
                      ],
                      "type": "value",
                      "value": "environment-name",
                    },
                  ],
                  "requireNext": true,
                  "type": "keyword",
                  "value": "ENVIRONMENT",
                },
                Object {
                  "next": Array [
                    Object {
                      "next": Array [
                        Object {
                          "next": Array [],
                          "type": "eos",
                          "value": ".",
                        },
                      ],
                      "type": "value",
                      "value": "system-name",
                    },
                  ],
                  "requireNext": true,
                  "type": "keyword",
                  "value": "SYSTEM",
                },
                Object {
                  "next": Array [
                    Object {
                      "next": Array [
                        Object {
                          "next": Array [],
                          "type": "eos",
                          "value": ".",
                        },
                      ],
                      "type": "value",
                      "value": "subsystem-name",
                    },
                  ],
                  "requireNext": true,
                  "type": "keyword",
                  "value": "SUBSYSTEM",
                },
                Object {
                  "next": Array [
                    Object {
                      "next": Array [
                        Object {
                          "next": Array [],
                          "type": "eos",
                          "value": ".",
                        },
                      ],
                      "type": "value",
                      "value": "type-name",
                    },
                  ],
                  "requireNext": true,
                  "type": "keyword",
                  "value": "TYPE",
                },
              ],
              "requireNext": true,
              "type": "keyword",
              "value": "TO",
            },
            Object {
              "next": Array [
                Object {
                  "next": Array [
                    Object {
                      "next": Array [
                        Object {
                          "next": Array [],
                          "type": "eos",
                          "value": ".",
                        },
                      ],
                      "type": "value",
                      "value": "ccid-value",
                    },
                  ],
                  "requireNext": true,
                  "type": "keyword",
                  "value": "CCID",
                },
                Object {
                  "next": Array [
                    Object {
                      "next": Array [
                        Object {
                          "next": Array [],
                          "type": "eos",
                          "value": ".",
                        },
                      ],
                      "type": "value",
                      "value": "comment-value",
                    },
                  ],
                  "requireNext": true,
                  "type": "keyword",
                  "value": "COMMENT",
                },
                Object {
                  "next": Array [
                    Object {
                      "next": Array [
                        Object {
                          "next": Array [
                            Object {
                              "next": Array [],
                              "type": "eos",
                              "value": ".",
                            },
                          ],
                          "type": "value",
                          "value": "version-number",
                        },
                      ],
                      "requireNext": true,
                      "type": "keyword",
                      "value": "VERSION",
                    },
                  ],
                  "requireNext": true,
                  "type": "keyword",
                  "value": "NEW",
                },
                Object {
                  "next": Array [
                    Object {
                      "next": Array [
                        Object {
                          "next": Array [
                            Object {
                              "next": Array [],
                              "type": "eos",
                              "value": ".",
                            },
                          ],
                          "type": "keyword",
                          "value": "PRESENT",
                        },
                        Object {
                          "next": Array [],
                          "type": "eos",
                          "value": ".",
                        },
                      ],
                      "type": "keyword",
                      "value": "IF",
                    },
                    Object {
                      "next": Array [],
                      "type": "eos",
                      "value": ".",
                    },
                  ],
                  "type": "keyword",
                  "value": "UPDATE",
                },
                Object {
                  "next": Array [
                    Object {
                      "next": Array [
                        Object {
                          "next": Array [
                            Object {
                              "next": Array [],
                              "type": "eos",
                              "value": ".",
                            },
                          ],
                          "type": "keyword",
                          "value": "SOURCE",
                        },
                        Object {
                          "next": Array [],
                          "type": "eos",
                          "value": ".",
                        },
                      ],
                      "type": "keyword",
                      "value": "INPUT",
                    },
                    Object {
                      "next": Array [],
                      "type": "eos",
                      "value": ".",
                    },
                  ],
                  "type": "keyword",
                  "value": "DELETE",
                },
                Object {
                  "next": Array [
                    Object {
                      "next": Array [
                        Object {
                          "next": Array [],
                          "type": "eos",
                          "value": ".",
                        },
                      ],
                      "type": "keyword",
                      "value": "SIGNOUT",
                    },
                  ],
                  "requireNext": true,
                  "type": "keyword",
                  "value": "OVERRIDE",
                },
                Object {
                  "next": Array [
                    Object {
                      "next": Array [
                        Object {
                          "next": Array [
                            Object {
                              "next": Array [],
                              "type": "eos",
                              "value": ".",
                            },
                          ],
                          "type": "keyword",
                          "value": "PROCESSOR",
                        },
                      ],
                      "requireNext": true,
                      "type": "keyword",
                      "value": "GENERATE",
                    },
                  ],
                  "requireNext": true,
                  "type": "keyword",
                  "value": "BYPASS",
                },
                Object {
                  "next": Array [
                    Object {
                      "next": Array [
                        Object {
                          "next": Array [
                            Object {
                              "next": Array [
                                Object {
                                  "next": Array [],
                                  "type": "eos",
                                  "value": ".",
                                },
                              ],
                              "type": "value",
                              "value": "processor-group-name",
                            },
                          ],
                          "requireNext": true,
                          "type": "keyword",
                          "value": "EQUAL",
                        },
                        Object {
                          "next": Array [
                            Object {
                              "next": Array [
                                Object {
                                  "next": Array [],
                                  "type": "eos",
                                  "value": ".",
                                },
                              ],
                              "type": "value",
                              "value": "processor-group-name",
                            },
                          ],
                          "requireNext": true,
                          "type": "keyword",
                          "value": "EQUALSIGN",
                        },
                      ],
                      "requireNext": true,
                      "type": "keyword",
                      "value": "GROUP",
                    },
                  ],
                  "requireNext": true,
                  "type": "keyword",
                  "value": "PROCESSOR",
                },
                Object {
                  "next": Array [
                    Object {
                      "next": Array [],
                      "type": "eos",
                      "value": ".",
                    },
                    Object {
                      "next": Array [
                        Object {
                          "next": Array [
                            Object {
                              "next": Array [],
                              "type": "eos",
                              "value": ".",
                            },
                          ],
                          "type": "keyword",
                          "value": "NONE",
                        },
                        Object {
                          "next": Array [
                            Object {
                              "next": Array [],
                              "type": "eos",
                              "value": ".",
                            },
                          ],
                          "type": "keyword",
                          "value": "ALL",
                        },
                        Object {
                          "next": Array [
                            Object {
                              "next": Array [],
                              "type": "eos",
                              "value": ".",
                            },
                          ],
                          "type": "keyword",
                          "value": "SYSTEMS",
                        },
                        Object {
                          "next": Array [
                            Object {
                              "next": Array [],
                              "type": "eos",
                              "value": ".",
                            },
                          ],
                          "type": "keyword",
                          "value": "SUBSYSTEMS",
                        },
                      ],
                      "requireNext": true,
                      "type": "keyword",
                      "value": "SPAN",
                    },
                  ],
                  "type": "keyword",
                  "value": "AUTOGEN",
                },
              ],
              "requireNext": true,
              "type": "keyword",
              "value": "OPTION",
            },
            Object {
              "next": Array [],
              "type": "eos",
              "value": ".",
            },
          ],
          "type": "value",
          "value": "element-name",
        },
      ],
      "requireNext": true,
      "type": "keyword",
      "value": "ELEMENT",
    },
  ],
  "requireNext": true,
  "type": "keyword",
  "value": "ADD",
}
`;

exports[`test2: Test 1 simple INvalid ADD ACTION Should have error 1`] = `51`;

exports[`test2: Test 1 simple INvalid ADD ACTION Should have error 2`] = `52`;

exports[`test2: Test 1 simple INvalid ADD ACTION Should have error 3`] = `
Array [
  Object {
    "diagnostic": Object {
      "message": "Require a valid value to be specified",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
      "severity": 1,
      "source": "Endevor SCL extension",
    },
    "endi": 52,
    "starti": 51,
  },
]
`;

exports[`test3: Test 2 simple INvalid ADD ACTION Should have error 1`] = `38`;

exports[`test3: Test 2 simple INvalid ADD ACTION Should have error 2`] = `41`;

exports[`test3: Test 2 simple INvalid ADD ACTION Should have error 3`] = `101`;

exports[`test3: Test 2 simple INvalid ADD ACTION Should have error 4`] = `105`;

exports[`test3: Test 2 simple INvalid ADD ACTION Should have error 5`] = `120`;

exports[`test3: Test 2 simple INvalid ADD ACTION Should have error 6`] = `129`;

exports[`test3: Test 2 simple INvalid ADD ACTION Should have error 7`] = `130`;

exports[`test3: Test 2 simple INvalid ADD ACTION Should have error 8`] = `133`;

exports[`test3: Test 2 simple INvalid ADD ACTION Should have error 9`] = `
Array [
  Object {
    "diagnostic": Object {
      "message": "Invalid value specified",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
      "severity": 1,
      "source": "Endevor SCL extension",
    },
    "endi": 41,
    "starti": 38,
  },
]
`;

exports[`test3: Test 2 simple INvalid ADD ACTION Should have error 10`] = `
Array [
  Object {
    "diagnostic": Object {
      "message": "Keyword should be uppercased.
Lowercased keyword might cause the scl action to fail when submitted",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
      "severity": 2,
      "source": "Endevor SCL extension",
    },
    "endi": 105,
    "starti": 101,
  },
  Object {
    "diagnostic": Object {
      "message": "Keyword should be uppercased.
Lowercased keyword might cause the scl action to fail when submitted",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
      "severity": 2,
      "source": "Endevor SCL extension",
    },
    "endi": 129,
    "starti": 120,
  },
  Object {
    "diagnostic": Object {
      "message": "Keyword should be uppercased.
Lowercased keyword might cause the scl action to fail when submitted",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
      "severity": 2,
      "source": "Endevor SCL extension",
    },
    "endi": 133,
    "starti": 130,
  },
]
`;

exports[`test4: Test 1 valid ADD ACTION with multiple options Should have error 1`] = `24`;

exports[`test4: Test 1 valid ADD ACTION with multiple options Should have error 2`] = `28`;

exports[`test4: Test 1 valid ADD ACTION with multiple options Should have error 3`] = `53`;

exports[`test4: Test 1 valid ADD ACTION with multiple options Should have error 4`] = `62`;

exports[`test4: Test 1 valid ADD ACTION with multiple options Should have error 5`] = `63`;

exports[`test4: Test 1 valid ADD ACTION with multiple options Should have error 6`] = `66`;

exports[`test4: Test 1 valid ADD ACTION with multiple options Should have error 7`] = `83`;

exports[`test4: Test 1 valid ADD ACTION with multiple options Should have error 8`] = `91`;

exports[`test4: Test 1 valid ADD ACTION with multiple options Should have error 9`] = `92`;

exports[`test4: Test 1 valid ADD ACTION with multiple options Should have error 10`] = `99`;

exports[`test4: Test 1 valid ADD ACTION with multiple options Should have error 11`] = `
Array [
  Object {
    "diagnostic": Object {
      "message": "Keyword should be uppercased.
Lowercased keyword might cause the scl action to fail when submitted",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
      "severity": 2,
      "source": "Endevor SCL extension",
    },
    "endi": 28,
    "starti": 24,
  },
  Object {
    "diagnostic": Object {
      "message": "Keyword should be uppercased.
Lowercased keyword might cause the scl action to fail when submitted",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
      "severity": 2,
      "source": "Endevor SCL extension",
    },
    "endi": 62,
    "starti": 53,
  },
  Object {
    "diagnostic": Object {
      "message": "Keyword should be uppercased.
Lowercased keyword might cause the scl action to fail when submitted",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
      "severity": 2,
      "source": "Endevor SCL extension",
    },
    "endi": 66,
    "starti": 63,
  },
  Object {
    "diagnostic": Object {
      "message": "Keyword should be uppercased.
Lowercased keyword might cause the scl action to fail when submitted",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
      "severity": 2,
      "source": "Endevor SCL extension",
    },
    "endi": 91,
    "starti": 83,
  },
  Object {
    "diagnostic": Object {
      "message": "Keyword should be uppercased.
Lowercased keyword might cause the scl action to fail when submitted",
      "range": Object {
        "end": Object {
          "character": 2,
          "line": 1,
        },
        "start": Object {
          "character": 2,
          "line": 1,
        },
      },
      "severity": 2,
      "source": "Endevor SCL extension",
    },
    "endi": 99,
    "starti": 92,
  },
]
`;
